usable swagger and swagger auth + README
